name:                cashew
version:             0.0.1
synopsis:            cashew
homepage:            https://github.com/webpapaya/cashew
license:             MIT
author:              Thomas Mayrhofer
maintainer:          thomas@mayrhofer.at
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable cashew
  hs-source-dirs:
    src
  main-is:
    Main.hs
  build-depends:
      base ==4.8.*
    , scotty

test-suite spec
  type:
    exitcode-stdio-1.0
  ghc-options:
    -Wall
  hs-source-dirs:
    test
  main-is:
    Spec.hs
  build-depends:
      base ==4.8.*
    , hspec
